[Div] Implemented proposals/fixed issues reported by FindBugs
Signed-off-by: Stephan Wahlbrink <sw@wahlbrink.eu>